--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,3 +15,20 @@
 #whoareyou{
   background-color: #dfe3ee;
 }
+
+.tc-white-less {
+    color: rgba(255, 255, 255, 0.9);
+    background-color: rgba(0, 0, 0, 0.5);
+    font-size: 1.2em;
+}
+
+.bg-txt-blk {
+	color: rgba(255, 255, 255, 0.9);
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.nav-shadow {
+	text-shadow: 0 0 4px black; 
+	-moz-text-shadow: 0 0 4px black;
+	-webkit-text-shadow: 0 0 4px black;
+}
