--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,11 +34,12 @@
 }
 
 #main{
-  background-color: #FF851B;
+  background-color: #3b3a30;
 }
 
 .text-muted{
   font-size: 20px;
+  color: white;
 }
 
 .service-heading {
@@ -46,10 +47,14 @@ font-size: 2em;
 }
 
 .imghead{
-  height: 57%;
-  width: 65%;
+  height: 37%;
+  width: 45%;
 }
 
 .caption p{
   font-size: 1.17em;
+}
+
+#sub {
+  color: #fed136;
 }
