--- a/public/css/style.css
+++ b/public/css/style.css
@@ -58,3 +58,27 @@ font-size: 2em;
 #sub {
   color: #fed136;
 }
+
+@media only screen and (max-device-width: 700px) {
+      .box {
+        display: -webkit-box;
+        display: -moz-box;
+        display: box;
+
+
+        -webkit-box-orient: vertical;
+        -moz-box-orient: vertical;
+        box-orient: vertical;
+    }
+    #one {
+        -webkit-box-ordinal-group: 3;
+        -moz-box-ordinal-group: 3;
+        box-ordinal-group: 3;
+    }
+    #two {
+        -webkit-box-ordinal-group: 2;
+        -moz-box-ordinal-group: 2;
+        box-ordinal-group: 2;
+    }
+
+  }
